base/src/test/resources/failure/projection/issues2/issue151.aya.txt
In file $FILE:17:40 ->

  15 |   | assoc (a b c : Nat) : Eq (op (op a b) c) (op a (op b c))
  16 | 
  17 | def l-id (M : Monoid) (a : Nat) : Eq (M.add zero a) a => refl
                                               ^-^

Error: Unknown field `add` projected

Resolving interrupted due to:
1 error(s), 0 warning(s).
What are you doing?
